2005-10-27  Bill Wohler  <wohler@newt.com>

	* mh-customize.el (mh-adaptive-cmd-note-flag)
	(mh-scan-format-file, mh-scan-prog): Sync docstrings with manual.

	* mh-e.el (mh-scan-format-mh, mh-note-deleted, mh-note-refiled)
	(mh-note-cur, mh-scan-good-msg-regexp)
	(mh-scan-deleted-msg-regexp, mh-scan-refiled-msg-regexp)
	(mh-scan-valid-regexp, mh-scan-cur-msg-number-regexp)
	(mh-scan-date-regexp, mh-scan-rcpt-regexp, mh-scan-body-regexp)
	(mh-scan-subject-regexp, mh-scan-format-regexp)
	(mh-folder-font-lock-keywords, mh-set-cmd-note): Sync docstrings
	with manual.

	* mh-funcs.el (mh-note-copied): Sync docstrings with manual.

	* mh-utils.el (mh-goto-msg): Use mh-scan-msg-search-regexp instead
	of hard-coded string.
	(mh-mail-header-separator, mh-signature-separator-regexp): Use
	"regular expression" in docstring instead of regexp.
	(mh-scan-msg-number-regexp)
	(mh-scan-msg-overflow-regexp, mh-scan-msg-format-regexp)
	(mh-scan-msg-format-string, mh-scan-msg-search-regexp)
	(mh-cmd-note): Sync docstrings with manual.

	* mh-comp.el (mh-insert-signature, mh-insert-auto-fields):
	Checkdoc fixes.

	* mh-customize.el (mh-compose-insertion, mh-x-face-file): Ditto.
	
	* mh-mime.el (mh-mh-to-mime, mh-mml-attach-file) 
	(mh-mml-secure-message-sign, mh-mml-secure-message-encrypt) 
	(mh-mml-secure-message-signencrypt): Ditto

2005-10-24  Bill Wohler  <wohler@newt.com>

	* mh-gnus.el: Load mml.el in order to see if
	mml-minibuffer-read-disposition is defined or not.

	* mh-mime.el: Now that mh-gnus.el loads mml, we shouldn't need the
	mml autoloads.

2005-10-23  Miles Bader  <miles@gnu.org>

	* .arch-inventory: New file.

2005-10-23  Bill Wohler  <wohler@newt.com>

	* mh-customize.el (mh-interpret-number-as-range-flag): Sync
	docstring with manual.

	* mh-identity.el (mh-assoc-ignore-case): Merge with version in
	mh-alias.el and move to mh-acros.el

	* mh-alias.el (mh-assoc-ignore-case): Merge with version in
	mh-identity.el and move to mh-acros.el
